tests/errors/missing_for_in.drast
// # TEST: for statement requires in keyword
// # EXPECT: error
// # ERROR_CONTAINS: expected in

main, int
	for i 0 to 3
		return i
	return 0
